@@ -22,6 +22,7 @@ import java.util.List;
 
 import org.apache.lucene.analysis.Token;
 import org.apache.solr.common.params.CommonParams;
+import org.apache.solr.common.params.GroupParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.handler.component.QueryComponent;
@@ -77,6 +78,7 @@ public class SpellCheckCollator {
         params.remove(CommonParams.START);
         params.set(CommonParams.FL, "id");
         params.set(CommonParams.ROWS, "0");
+        params.remove(GroupParams.GROUP);
 
         // creating a request here... make sure to close it!
         ResponseBuilder checkResponse = new ResponseBuilder(new LocalSolrQueryRequest(ultimateResponse.req.getCore(), params),new SolrQueryResponse(), Arrays.asList(new SearchComponent[] { queryComponent }));
